Fixed zoomed elements bug on mobile devices
Updated readme too

--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,28 @@ header {
 }
 }
 
+@media (max-width: 600px) {
+    .header-content {
+        font-size: 0.65em;
+        padding: 20px;
+    }
+
+    .text-content {
+        max-width: 30%;
+    }
+
+    .text-content h1 {
+        max-width: 100%;
+    }
+
+    .ai-logo {
+        max-height: 50vh; 
+        max-width: 40%; 
+        padding: 2em;
+        margin-right: 7.5%;
+    }
+}
+
 .header-content {
     display: flex;
     justify-content: space-between;
@@ -273,6 +295,18 @@ header {
     font-size: 20px;
 }
 
+@media (max-width: 600px) {
+    .social-button img{
+        width: 20px !important;
+        height: 20px !important;
+    }
+    .social-button {
+        width: 10px;
+        height: 20px;
+        margin: 30px 10px 30px 10px;
+    }
+}
+
 .social-button img {
     width: 100%;
     height: 100%;
@@ -289,6 +323,15 @@ header {
     0% {opacity: 1;}
     50% {opacity: 0.5;}
     100% {opacity: 1;}
+}
+
+@media (max-width: 600px) {
+    .upcoming-event h2 {
+        font-size: 0.8em;
+    }
+    .upcoming-event p{
+        font-size: 0.3em;
+    }
 }
 
 .upcoming-event {
@@ -318,6 +361,9 @@ header {
 @media (max-width: 600px) {
     .events-tab {
         grid-template-columns: repeat(2, 1fr) !important;
+    }
+    .event-card h3{
+        font-size: 0.8em;
     }
 }
 
@@ -357,6 +403,13 @@ header {
     transform: scale(1.1);
 }
 
+@media (max-width: 600px) {
+    footer {
+        font-size: 0.7em;
+        height: 300px;
+        padding: 20px;
+    }
+}
 footer {
     font-family: 'DMsans', sans-serif;
     justify-content: center;
